2001-04-14  Martin Baulig  <baulig@suse.de>

	* gnome-common.pc.in, gnome-common-2.0.pc.in: Removed.

	* configure.in: Set version number to 1.2.2.
	(--enable-platform-gnome-2): Removed this command line argument;
	this package is now the same for GNOME 1.x and GNOME 2.0.

	* acinclude.m4: Removed.
	* acconfig.h: Removed.

	* support/: We don't build this directory anymore; the GNOME 1.x
	version of it is in gnome-libs/support and the GNOME 2.0 one is in
	libgnomebase/libgnomesupport.

2001-03-26  Robin * Slomkowski  <rslomkow@eazel.com>

	* Makefile.am: added gnome-common.spec.in to EXTRA_DISTS
	* configure.in: added gnome-common.spec.in
	* gnome-common.spec: removed from repository as it appeared
                             generic
	* gnome-common.spec.in: new spec file using Martin's suggestions

2000-12-01  Martin Baulig  <baulig@suse.de>

	Released gnome-common 1.2.1.

2000-11-21  Martin Baulig  <martin@home-of-linux.org>

	* configure.in: Set version number to 1.2.1.

	* configure.in (--enable-platform-gnome-2): New configure
	command line argument to enable support for the GNOME 2.x
	platform.
	(PLATFORM_GNOME_2): New automake conditional.
	* Do the GNOME_SUPPORT_CHECKS here if we're on the GNOME 2.x
	platform.

	* Makefile.am (SUBDIRS): Conditionally add support for the
	GNOME 2.x platform.

	* acinclude.m4: New file. Put stuff from gnome-support.m4
	and need-declaration.m4 here.

2000-05-29  Martin Baulig  <baulig@suse.de>

	* configure.in: Set version number to 1.2.0.

1998-02-19  Raja R Harinath  <harinath@cs.umn.edu>

	* autogen.sh: New sample file.
	* configure.in: Likewise.
	* Makefile.am: Likewise.
	* README: Likewise.
